[metadata]
name = devpi_timemachine
version = 0.0.1
author = Jon Banafato
author_email = pypi@jonafato.com
description = devpi-timemachine helps you manage your Python dependencies from a point in time in the past of your choosing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonafato/devpi-timemachine
project_urls =
    Tracker = https://github.com/jonafato/devpi-timemachine/issues
    Documentation = https://github.com/jonafato/devpi-timemachine/blob/main/README.md
    Source = https://github.com/jonafato/devpi-timemachine
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
python_requires = >=3.11
install_requires =
    devpi
    packaging
    pluggy
    requests
py_modules = devpi_timemachine

[options.entry_points]
devpi_server =
    devpi_timemachine = devpi_timemachine
